--- a/package.json
+++ b/package.json
@@ -1,25 +1,42 @@
 {
-  "name": "threads",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
-    "postcss": "8.4.30",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
-  }
+	"name": "threads",
+	"version": "0.1.0",
+	"private": false,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"lint": "next lint",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^4.24.0",
+		"@clerk/themes": "^1.7.6",
+		"@hookform/resolvers": "^3.3.1",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@types/node": "20.6.3",
+		"@types/react": "18.2.22",
+		"@types/react-dom": "18.2.7",
+		"@uploadthing/react": "^5.6.1",
+		"autoprefixer": "10.4.16",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"eslint": "8.49.0",
+		"eslint-config-next": "13.5.2",
+		"lucide-react": "^0.279.0",
+		"mongoose": "^7.5.2",
+		"next": "13.5.2",
+		"postcss": "8.4.30",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.46.2",
+		"svix": "^1.12.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss": "3.3.3",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "5.2.2",
+		"uploadthing": "^5.6.1",
+		"zod": "^3.22.2"
+	}
 }
